# bumphub

./: .gitignore  README.md  anacondabump  environment.yml  pybump  pyproject.toml  setup.py  sphinxhub
bumphub/: __init__.py  condabump  forgebump  grayskullbump  pixibump  pybump  rattlerbump  template.yaml
conda_scripts/: __init__.py  anacondabump  condabump  forgebump  grayskullbump  pixibump  rattlerbump  template.yaml
